2007-11-21  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getDefault): New method.

	* cupsmodule.c (cups_require): Don't read uninitialised memory.

	* cupsconnection.c (Connection_printTestPage): Don't use
	uninitialised variables (bug #390431).

2007-11-19  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.30.

2007-11-19  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_addPrinter): Fixed typo.
	(Connection_addPrinter): Fixed double-free.
	(Connection_getDests): Handle there being no default printer.

2007-11-15  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.29.

2007-11-15  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getDests): Don't leak each
	destobj.
	(build_list_from_attribute_strings): Don't leak each string
	object.
	(Connection_getPrinters): Don't leak each dict.
	(Connection_getClasses): Don't leak each members list.
	(Connection_getPPDs): Don't leak each dict.
	(Connection_getDevices): Likewise.
	(Connection_addPrinter): Don't leak converted strings.
	(Connection_getPrinterAttributes): Removed unused code.
	(Connection_adminGetServerSettings): Don't leak each setting
	value.
	(Connection_getSubscriptions): Don't leak each value and
	subscription.
	(Connection_getNotifications): Don't leak each value, event and
	item.

2007-11-14  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (PyObj_from_UTF8): New function.  Used in lots
	of places where text attributes are decoded (part of bug #382291).
	(UTF8_from_PyObj): New function.  Used in lots of places where
	text attributes are given in a request (rest of bug #382291).

2007-10-15  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.28.

2007-10-15  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getDests): Add a (None,None) entry
	for the default printer.

2007-09-19  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.27.

2007-09-19  Tim Waugh  <twaugh@redhat.com>
