@@ -1,1 +1,0 @@
-* Support CUPS_GET_DOCUMENT (CUPS 1.4)
