@@ -1,3 +1,8 @@
+2007-11-22  Tim Waugh  <twaugh@redhat.com>
+
+	* cupsconnection.c (Connection_getDocument): New method.
+	* cupsmodule.h: Check for CUPS 1.4.
+
 2007-11-21  Tim Waugh  <twaugh@redhat.com>
 
 	* cupsconnection.c (Connection_getDefault): New method.
